asg/tests/pass/tuples/multiple_typed.leo
function main() {
    let (a, b): (bool, bool) = (true, false);

    console.assert(a == true);
    console.assert(b == false);
}