asg/tests/fail/console/conditional_assert.leo
function main(a: bool) {
    if a {
        console.assert(a == true);
    } else {
        console.assert(a == false);
    }
}